GIOCO-script da rivedere non stampa a video

--- a/GIOCO/index.html
+++ b/GIOCO/index.html
@@ -7,6 +7,16 @@
     <title>Gioco Dadi</title>
 </head>
 <body>
+
+    <main>
+        <h1>Lancio Dadi</h1>
+        <h3>Sfida il computer</h3>
+        <div class="button_dado">
+            <a id= "umano" href="#">Lancia il dado</a>
+        </div>
+    </main>
+
+
     <script src="script.js"></script>
 </body>
 </html>
