Mail - script stampa a video i risultati

--- a/MAIL/index.html
+++ b/MAIL/index.html
@@ -7,6 +7,10 @@
     <title>Mail</title>
 </head>
 <body>
+    <main>
+        <p id="email"></p>
+        <p id="text"></p>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
