Gioco - stampa a video risultati

--- a/GIOCO/index.html
+++ b/GIOCO/index.html
@@ -11,9 +11,13 @@
     <main>
         <h1>Lancio Dadi</h1>
         <h3>Sfida il computer</h3>
+        <h4 id="nome">Nome giocatore:</h4>
         <div class="button_dado">
             <a id= "umano" href="#">Lancia il dado</a>
         </div>
+        <p id="pointPlayer"></p>
+        <p id="pointAI"></p>
+        <p id="result"></p>
     </main>
 
 
