Mail-modifica script input

--- a/MAIL/index.html
+++ b/MAIL/index.html
@@ -9,14 +9,8 @@
 </head>
 <body>
     <main>
-        <form action="#">
-            <ul>
-              <li><input type="text" id="input_email" value="" title="accesso limitato"></li>
-              <li class="submit"><input type="submit" name="submit" value="Accedi" onclick="validatoreEmail()" /></li>
-              <li><span id="esito_validazione"></span></li>
-            </ul>
-          </form>
-
+        <p id="email"></p>
+        <p id="text"></p>
     </main>
     <script src="script.js"></script>
 </body>
