Modifiche al css

--- a/GIOCO/index.html
+++ b/GIOCO/index.html
@@ -8,9 +8,10 @@
     <title>Gioco Dadi</title>
 </head>
 <body>
-
+        <header>
+            <h1>Lancio Dadi</h1>
+        </header>
     <main>
-        <h1>Lancio Dadi</h1>
         <h3>Sfida il computer</h3>
         <h4 id="nome">Nome giocatore:</h4>
         <div class="button_dado">
