--- a/MAIL/index.html
+++ b/MAIL/index.html
@@ -8,9 +8,15 @@
     <title>Mail</title>
 </head>
 <body>
+    <header>
+        <h1>Validazione email</h1>
+    </header>
     <main>
-        <p id="email"></p>
-        <p id="text"></p>
+        <div id="container">
+            <h3 id="email"></h3>
+            <h3 id="text"></h3>
+        </div>
+
     </main>
     <script src="script.js"></script>
 </body>
